[gd_scene load_steps=9 format=3 uid="uid://dikv7eclado4c"]

[ext_resource type="Script" path="res://scripts/world.gd" id="1_a87jr"]
[ext_resource type="PackedScene" uid="uid://gh748f5eykud" path="res://scenes/player.tscn" id="2_h55p3"]
[ext_resource type="TileSet" uid="uid://bnllko08nh3yb" path="res://scenes/Resource/gameTileset.tres" id="2_wcxr2"]
[ext_resource type="Script" path="res://scripts/Spawner.gd" id="4_svljc"]
[ext_resource type="PackedScene" uid="uid://dpbt5sgxuqs3r" path="res://scenes/ui.tscn" id="5_ajb7i"]
[ext_resource type="AudioStream" uid="uid://dln5abwy4ewga" path="res://audio/rollover1.ogg" id="7_l8c0q"]
[ext_resource type="PackedScene" uid="uid://5rjdhcqoa8y6" path="res://scenes/Objects/snow_fall.tscn" id="8_rtw5o"]
[ext_resource type="AudioStream" uid="uid://dtgamcjhqs874" path="res://audio/DeathSound.wav" id="8_s8w1y"]

[node name="World" type="Node2D"]
script = ExtResource("1_a87jr")

[node name="Background" type="Node2D" parent="."]

[node name="Exit" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(0, -1)
tile_set = ExtResource("2_wcxr2")
format = 2
layer_0/name = "Base"
layer_0/tile_data = PackedInt32Array(131069, 131072, 0, 131070, 196608, 0, 131071, 196608, 0, 65536, 196608, 0, 65537, 196608, 0, 65538, 196608, 0, 65539, 196608, 0, 65540, 262144, 0, 65541, 655360, 0, 65542, 655360, 0, 65543, 655360, 0, 65544, 655360, 0, 65545, 655360, 0, 65549, 720896, 0, 65551, 720896, 0, 65550, 720896, 0, 65552, 720896, 0, 65554, 131072, 0, 65553, 131072, 0, 65533, 65536, 0, -3, 65536, 0, -65539, 65536, 0, -131075, 65536, 0, -196611, 65536, 0, -262147, 65536, 0, -327683, 65536, 0, -393219, 65536, 0, 65548, 655360, 0, 65547, 655360, 0, 65546, 655360, 0, 65555, 65536, 0, 65556, 65536, 0, 65557, 65536, 0, 65558, 65536, 0, 65559, 65536, 0, 65560, 65536, 0, 65561, 65536, 0, 65562, 65536, 0, 65563, 65536, 0, 65564, 65536, 0, 65565, 65536, 0, 65566, 65536, 0, 65567, 65536, 0, -589793, 65536, 0, -524257, 65536, 0, -458721, 65536, 0, -393185, 65536, 0, -327649, 65536, 0, -262113, 65536, 0, -196577, 65536, 0, -131041, 65536, 0, -65505, 65536, 0, 31, 65536, 0, -458755, 65536, 0, -524291, 65536, 0, -589827, 65536, 0, 196605, 65536, 0, 196606, 65536, 0, 196607, 65536, 0, 131072, 65536, 0, 131073, 65536, 0, 131074, 65536, 0, 131075, 65536, 0, 131076, 65536, 0, 131077, 65536, 0, 131078, 65536, 0, 262141, 65536, 0, 327677, 65536, 0, 393213, 65536, 0, 458749, 65536, 0, 262142, 65536, 0, 327678, 65536, 0, 393214, 65536, 0, 458750, 65536, 0, 262143, 65536, 0, 327679, 65536, 0, 393215, 65536, 0, 458751, 65536, 0, 196608, 65536, 0, 262144, 65536, 0, 327680, 65536, 0, 393216, 65536, 0, 196609, 65536, 0, 262145, 65536, 0, 327681, 65536, 0, 393217, 65536, 0, 196610, 65536, 0, 262146, 65536, 0, 327682, 65536, 0, 393218, 65536, 0, 196611, 65536, 0, 262147, 65536, 0, 327683, 65536, 0, 393219, 65536, 0, 196612, 65536, 0, 262148, 65536, 0, 327684, 65536, 0, 393220, 65536, 0, 196613, 65536, 0, 262149, 65536, 0, 327685, 65536, 0, 393221, 65536, 0, 196614, 65536, 0, 262150, 65536, 0, 327686, 65536, 0, 393222, 65536, 0, 131079, 65536, 0, 196615, 65536, 0, 262151, 65536, 0, 327687, 65536, 0, 393223, 65536, 0, 131080, 65536, 0, 196616, 65536, 0, 262152, 65536, 0, 327688, 65536, 0, 393224, 65536, 0, 131081, 65536, 0, 196617, 65536, 0, 262153, 65536, 0, 327689, 65536, 0, 393225, 65536, 0, 131082, 65536, 0, 196618, 65536, 0, 262154, 65536, 0, 327690, 65536, 0, 393226, 65536, 0, 131083, 65536, 0, 196619, 65536, 0, 262155, 65536, 0, 327691, 65536, 0, 393227, 65536, 0, 131084, 65536, 0, 196620, 65536, 0, 262156, 65536, 0, 327692, 65536, 0, 393228, 65536, 0, 131085, 65536, 0, 196621, 65536, 0, 262157, 65536, 0, 327693, 65536, 0, 393229, 65536, 0, 131086, 65536, 0, 196622, 65536, 0, 262158, 65536, 0, 327694, 65536, 0, 393230, 65536, 0, 131087, 65536, 0, 196623, 65536, 0, 262159, 65536, 0, 327695, 65536, 0, 393231, 65536, 0, 131088, 65536, 0, 196624, 65536, 0, 262160, 65536, 0, 327696, 65536, 0, 393232, 65536, 0, 131089, 65536, 0, 196625, 65536, 0, 262161, 65536, 0, 327697, 65536, 0, 393233, 65536, 0, 131090, 65536, 0, 196626, 65536, 0, 262162, 65536, 0, 327698, 65536, 0, 393234, 65536, 0, 131091, 65536, 0, 196627, 65536, 0, 262163, 65536, 0, 327699, 65536, 0, 393235, 65536, 0, 131092, 65536, 0, 196628, 65536, 0, 262164, 65536, 0, 327700, 65536, 0, 393236, 65536, 0, 131093, 65536, 0, 196629, 65536, 0, 262165, 65536, 0, 327701, 65536, 0, 393237, 65536, 0, 131094, 65536, 0, 196630, 65536, 0, 262166, 65536, 0, 327702, 65536, 0, 393238, 65536, 0, 131095, 65536, 0, 196631, 65536, 0, 262167, 65536, 0, 327703, 65536, 0, 393239, 65536, 0, 131096, 65536, 0, 196632, 65536, 0, 262168, 65536, 0, 327704, 65536, 0, 393240, 65536, 0, 131097, 65536, 0, 196633, 65536, 0, 262169, 65536, 0, 327705, 65536, 0, 393241, 65536, 0, 131098, 65536, 0, 196634, 65536, 0, 262170, 65536, 0, 327706, 65536, 0, 393242, 65536, 0, 131099, 65536, 0, 196635, 65536, 0, 262171, 65536, 0, 327707, 65536, 0, 393243, 65536, 0, 131100, 65536, 0, 196636, 65536, 0, 262172, 65536, 0, 327708, 65536, 0, 393244, 65536, 0, 131101, 65536, 0, 196637, 65536, 0, 262173, 65536, 0, 327709, 65536, 0, 393245, 65536, 0, 131102, 65536, 0, 196638, 65536, 0, 262174, 65536, 0, 327710, 65536, 0, 393246, 65536, 0, 131103, 65536, 0, 196639, 65536, 0, 262175, 65536, 0, 327711, 65536, 0, 393247, 65536, 0, -851971, 65536, 0, -786435, 65536, 0, -720899, 65536, 0, -655363, 65536, 0, -851970, 65536, 0, -786434, 65536, 0, -720898, 65536, 0, -655362, 65536, 0, -589826, 65536, 0, -851969, 65536, 0, -786433, 65536, 0, -720897, 65536, 0, -655361, 65536, 0, -589825, 65536, 0, -917504, 65536, 0, -851968, 65536, 0, -786432, 65536, 0, -720896, 65536, 0, -655360, 65536, 0, -917503, 65536, 0, -851967, 65536, 0, -786431, 65536, 0, -720895, 65536, 0, -655359, 65536, 0, -917502, 65536, 0, -851966, 65536, 0, -786430, 65536, 0, -720894, 65536, 0, -655358, 65536, 0, -917501, 65536, 0, -851965, 65536, 0, -786429, 65536, 0, -720893, 65536, 0, -655357, 65536, 0, -917500, 65536, 0, -851964, 65536, 0, -786428, 65536, 0, -720892, 65536, 0, -655356, 65536, 0, -917499, 65536, 0, -851963, 65536, 0, -786427, 65536, 0, -720891, 65536, 0, -655355, 65536, 0, -917498, 65536, 0, -851962, 65536, 0, -786426, 65536, 0, -720890, 65536, 0, -655354, 65536, 0, -917497, 65536, 0, -851961, 65536, 0, -786425, 65536, 0, -720889, 65536, 0, -655353, 65536, 0, -917496, 65536, 0, -851960, 65536, 0, -786424, 65536, 0, -720888, 65536, 0, -655352, 65536, 0, -917495, 65536, 0, -851959, 65536, 0, -786423, 65536, 0, -720887, 65536, 0, -655351, 65536, 0, -917494, 65536, 0, -851958, 65536, 0, -786422, 65536, 0, -720886, 65536, 0, -655350, 65536, 0, -917493, 65536, 0, -851957, 65536, 0, -786421, 65536, 0, -720885, 65536, 0, -655349, 65536, 0, -917492, 65536, 0, -851956, 65536, 0, -786420, 65536, 0, -720884, 65536, 0, -655348, 65536, 0, -917491, 65536, 0, -851955, 65536, 0, -786419, 65536, 0, -720883, 65536, 0, -655347, 65536, 0, -917490, 65536, 0, -851954, 65536, 0, -786418, 65536, 0, -720882, 65536, 0, -655346, 65536, 0, -917489, 65536, 0, -851953, 65536, 0, -786417, 65536, 0, -720881, 65536, 0, -655345, 65536, 0, -917488, 65536, 0, -851952, 65536, 0, -786416, 65536, 0, -720880, 65536, 0, -655344, 65536, 0, -917487, 65536, 0, -851951, 65536, 0, -786415, 65536, 0, -720879, 65536, 0, -655343, 65536, 0, -917486, 65536, 0, -851950, 65536, 0, -786414, 65536, 0, -720878, 65536, 0, -655342, 65536, 0, -917485, 65536, 0, -851949, 65536, 0, -786413, 65536, 0, -720877, 65536, 0, -655341, 65536, 0, -917484, 65536, 0, -851948, 65536, 0, -786412, 65536, 0, -720876, 65536, 0, -655340, 65536, 0, -917483, 65536, 0, -851947, 65536, 0, -786411, 65536, 0, -720875, 65536, 0, -655339, 65536, 0, -917482, 65536, 0, -851946, 65536, 0, -786410, 65536, 0, -720874, 65536, 0, -655338, 65536, 0, -917481, 65536, 0, -851945, 65536, 0, -786409, 65536, 0, -720873, 65536, 0, -655337, 65536, 0, -917480, 65536, 0, -851944, 65536, 0, -786408, 65536, 0, -720872, 65536, 0, -655336, 65536, 0, -917479, 65536, 0, -851943, 65536, 0, -786407, 65536, 0, -720871, 65536, 0, -655335, 65536, 0, -917478, 65536, 0, -851942, 65536, 0, -786406, 65536, 0, -720870, 65536, 0, -655334, 65536, 0, -917477, 65536, 0, -851941, 65536, 0, -786405, 65536, 0, -720869, 65536, 0, -655333, 65536, 0, -917476, 65536, 0, -851940, 65536, 0, -786404, 65536, 0, -720868, 65536, 0, -655332, 65536, 0, -917475, 65536, 0, -851939, 65536, 0, -786403, 65536, 0, -720867, 65536, 0, -655331, 65536, 0, -917474, 65536, 0, -851938, 65536, 0, -786402, 65536, 0, -720866, 65536, 0, -655330, 65536, 0, -917473, 65536, 0, -851937, 65536, 0, -786401, 65536, 0, -720865, 65536, 0, -655329, 65536, 0, 29, 65536, 0, 30, 65536, 0, 16, 65536, 0, 6, 655360, 0, 7, 655360, 0, 8, 655360, 0, 9, 655360, 0, 10, 655360, 0, 17, 655360, 0, 18, 655360, 0, 19, 655360, 0, 20, 655360, 0, 21, 655360, 0, 22, 655360, 0, 23, 655360, 0, 24, 655360, 0, 25, 655360, 0, 26, 655360, 0, -65519, 655360, 0, -65518, 655360, 0, -65517, 655360, 0, -65516, 655360, 0, -65515, 655360, 0, -65514, 655360, 0, -65513, 655360, 0, -589821, 0, 3, -589820, 0, 3, -589819, 0, 3, -589818, 0, 3, -589817, 0, 3, -589816, 0, 3, -589815, 0, 3, -589814, 0, 3, -589813, 0, 3, -589812, 0, 3, -589811, 0, 3, -589810, 0, 3, -589809, 0, 3, -589808, 0, 3, -589807, 0, 3, -589806, 0, 3, -589805, 0, 3, -589804, 0, 3, -589803, 0, 3, -589802, 0, 3, -589801, 0, 3, -589800, 0, 3, -524289, 0, 3, -589824, 0, 3, -589823, 0, 3, -589822, 0, 3, -524290, 0, 3, -589799, 0, 3, -589798, 0, 3, -589797, 0, 3, -589796, 0, 3, -589795, 0, 3, -589794, 0, 3, -65520, 262144, 3, -65506, 262144, 3, 65534, 262144, 3, 11, 458752, 2, 12, 458752, 2, 13, 458752, 2, 14, 458752, 2, 15, 458752, 2)
layer_1/name = "Deco"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array()
metadata/_edit_lock_ = true

[node name="Lights" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("2_h55p3")]
position = Vector2(37, 21)

[node name="Spawners" type="Node2D" parent="."]
script = ExtResource("4_svljc")

[node name="SnowBallSpawner" type="Timer" parent="Spawners"]
wait_time = 3.0
autostart = true

[node name="SpawnPos" type="Marker2D" parent="Spawners" groups=["Spawner"]]
position = Vector2(807, -509)

[node name="UI" parent="." instance=ExtResource("5_ajb7i")]

[node name="Snow Particles" type="Node2D" parent="."]

[node name="SnowFall" parent="Snow Particles" instance=ExtResource("8_rtw5o")]
position = Vector2(507, -1005)

[node name="SnowFall2" parent="Snow Particles" instance=ExtResource("8_rtw5o")]
position = Vector2(1496, -991)

[node name="Audio" type="Node2D" parent="."]

[node name="ClickSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("7_l8c0q")
volume_db = 24.0

[node name="DeathSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("8_s8w1y")
volume_db = 20.0
pitch_scale = 1.2

[connection signal="speed_modified" from="." to="Player" method="_on_world_speed_modified"]
[connection signal="collided" from="Player" to="." method="_on_player_collided"]
[connection signal="timeout" from="Spawners/SnowBallSpawner" to="Spawners" method="_on_snow_ball_spawner_timeout"]
[connection signal="restart" from="UI" to="." method="_on_ui_restart"]
[connection signal="retry" from="UI" to="." method="_on_ui_retry"]
